--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9,12 +9,13 @@ html, body {
 	height: 100%;
 }
 
-header {
-	min-height: 2%;
+.wrapper {
+	max-width: 1170px;
+	overflow: hidden;
 }
 
-.header-menu {
-	line-height: 2;
+header {
+	min-height: 2%;
 }
 
 hr {
@@ -52,7 +53,7 @@ hr {
 	color: #77d294;
 }
 
-.meta__date {
+.article_date {
 	color: #8b989f;
 }
 
@@ -63,7 +64,7 @@ hr {
 	display: inline-flex;
 	margin: auto auto;
 	height: 100%;
-	padding-left: 0px;
+	padding: 0px;
 }
 
 .navigation a {
@@ -95,7 +96,6 @@ hr {
 }
 
 .greeting {
-	min-height: 30px;
 	margin-top: -35px;
 	text-align: center;
 	margin-bottom: 10px;
@@ -122,7 +122,7 @@ hr {
 	border-radius: 6px;
 }
 
-.post-image {
+.article_image {
 	border-top-left-radius: 6px;
 	border-top-right-radius: 6px;
 	margin-bottom: 10px;
