--- a/public/css/app.css
+++ b/public/css/app.css
@@ -133,6 +133,20 @@ hr {
 	max-width: 80%;
 }
 
+/* Comments */
+
+.comments {
+	margin: 10px 0 0 25px;
+}
+
+.comment_counter {
+	margin: 10px 0 0 25px;
+}
+
+.comment {
+	margin-bottom: 20px;
+	line-height: 1;
+}
 
 /* Registerform */
 
