--- a/public/css/app.css
+++ b/public/css/app.css
@@ -87,7 +87,7 @@ hr {
 }
 
 .header-navbar {
-	margin: 20px 30px;
+	margin: 20px 25px;
 }
 
 .logo img {
@@ -143,6 +143,10 @@ hr {
 	margin: 10px 0 0 25px;
 }
 
+.comments span {
+	color: #8b989f;
+}
+
 .comment {
 	margin-bottom: 20px;
 	line-height: 1;
@@ -162,7 +166,7 @@ hr {
 	margin-bottom: 15px;
 }
 
-.registerform_title, .authform_title {
+.registerform_title, .authform {
 	text-align: center;
 }
 
